docs/content/v0.5/6.resources/2.glossary.md
# Glossary

There are some terms we use in this documentation that may not be known to every reader. Here is an explanation for some of them:
- `application` / `application-side` / `universal-application`: This references all Nuxt code of your app that is [universally rendered](https://nuxt.com/docs/guide/concepts/rendering#universal-rendering). In short this means that that code is rendered on the server-side and on the client-side, so all JS in it is executed twice. This is an important distinction, as some things may behave different on the server-side than on the client-side. We use `application...` to denote something that will be universally rendered
- `server` / `server-side`: This references all Nuxt code of your app that will run **only** on your server. For example, all code inside the `~/server` directory should only ever run on the server
- `sessions`: A set of information that persists for a longer duration, e.g., the username and email that persists while your user is logged in
- `authentication`: Verifying that someone is who they claims to be, e.g., by asking them for a username and password or by asking Google to verify it (OAuth) and then trust their result

[Let us know if you're missing something from this list](https://github.com/sidebase/nuxt-auth/issues/new/choose)
